--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.4",
+    "framer-motion": "^6.2.8",
     "next": "12.1.2",
     "postcss": "^8.4.12",
     "react": "18.0.0",
