--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.4",
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "framer-motion": "^6.2.8",
     "next": "12.1.2",
+    "node-spotify-api": "^1.1.1",
     "postcss": "^8.4.12",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
+    "spotify-web-api-node": "^5.0.2",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
