--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.4",
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "framer-motion": "^6.2.8",
     "next": "12.1.2",
     "node-spotify-api": "^1.1.1",
-    "postcss": "^8.4.12",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
-    "spotify-web-api-node": "^5.0.2",
-    "tailwindcss": "^3.0.23"
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.2"
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4",
+    "typescript": "4.7.4"
   }
 }
