finish ts migration

--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "framer-motion": "^6.2.8",
-    "next": "12.1.2",
+    "next": "^12.2.5",
     "node-spotify-api": "^1.1.1",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
+    "@types/react": "^18.0.17",
     "@types/react-dom": "18.0.5",
     "@types/spotify-web-api-node": "^5.0.7",
     "autoprefixer": "^10.4.7",
