--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "node-spotify-api": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "4.10.1",
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
